second change to latex file

--- a/homework-1/latex-submission.tex
+++ b/homework-1/latex-submission.tex
@@ -12,7 +12,7 @@
 
 \lstset{style=mystyle}
 
-\title{CAAM 519, Homework #1: \LaTeX\  Submission}
+\title{CAAM 519, Homework \#1: \LaTeX\  Submission}
 \author{\texttt{hc54}}
 \date{September 7, 2022}
 
