--- a/Explore Julia/homework-2.tex
+++ b/Explore Julia/homework-2.tex
@@ -13,8 +13,7 @@
 
 \lstset{style=mystyle}
 
-\title{CAAM 419/519, Homework \#2}
-\author{\texttt{hc54}}
+\title{CAAM 419/519}
 \date{September 30, 2022}
 
 \begin{document}
