Update and rename homework-4.tex to update.tex

--- a/Matrix operation in cpp 2/update.tex
+++ b/Matrix operation in cpp 2/update.tex
@@ -14,8 +14,7 @@
 
 \lstset{style=mystyle}
 
-\title{CAAM 419/519, Homework \#4}
-\author{\texttt{hc54}}
+\title{CAAM 419/519}
 \date{December 8, 2022}
 
 \begin{document}
