Update and rename main.tex to output.tex

--- a/Matrix operation in cpp/output.tex
+++ b/Matrix operation in cpp/output.tex
@@ -14,8 +14,7 @@
 
 \lstset{style=mystyle}
 
-\title{CAAM 419/519, Homework \#3}
-\author{\texttt{hc54}}
+\title{CAAM 419/519}
 \date{November 21, 2022}
 
 \begin{document}
